[package]
name = "lalrpop_lexer"
version = "0.1.0"
edition = "2018"
resolver = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
anyhow = "1.0"
thiserror = "1.0"


[build-dependencies]
lalrpop = "0.19.6"

[features]
default = ["lalrpop-util/lexer"]